[gd_scene load_steps=5 format=3 uid="uid://emxdqdbvj88w"]

[ext_resource type="Script" uid="uid://dmfcgma4emhfa" path="res://addons/pixelmapimporter/importerDock.gd" id="1_lc53q"]
[ext_resource type="Script" uid="uid://bxebhheb83lls" path="res://addons/pixelmapimporter/lineEditGridmap.gd" id="2_x30p8"]
[ext_resource type="PackedScene" uid="uid://b2nyr353jh3ja" path="res://addons/pixelmapimporter/imageInput.tscn" id="3_hc7i2"]
[ext_resource type="PackedScene" uid="uid://dxwajjynu01mr" path="res://addons/pixelmapimporter/collapsibleContainer.tscn" id="3_xjmed"]

[node name="Importer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lc53q")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MapAssignContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MapAssignLabel" type="Label" parent="ScrollContainer/VBoxContainer/MapAssignContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Gridmap"

[node name="MapAssignInput" type="LineEdit" parent="ScrollContainer/VBoxContainer/MapAssignContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_x30p8")

[node name="ImageAssignContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ImageAssignLabel" type="Label" parent="ScrollContainer/VBoxContainer/ImageAssignContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Image"

[node name="ImageInput" parent="ScrollContainer/VBoxContainer/ImageAssignContainer" instance=ExtResource("3_hc7i2")]
layout_mode = 2

[node name="CollapsibleContainer" parent="ScrollContainer/VBoxContainer" instance=ExtResource("3_xjmed")]
visible = false
layout_mode = 2

[node name="ColorAssignCont" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/CollapsibleContainer"]
visible = false
layout_mode = 2

[node name="GenerateBtn" type="Button" parent="ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Generate Map"

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "testt"

[node name="Popup" type="Popup" parent="ScrollContainer/VBoxContainer"]
initial_position = 1
borderless = false

[connection signal="gridmapDroped" from="ScrollContainer/VBoxContainer/MapAssignContainer/MapAssignInput" to="." method="_on_map_assign_input_gridmap_droped"]
[connection signal="imageSelected" from="ScrollContainer/VBoxContainer/ImageAssignContainer/ImageInput" to="." method="_on_image_input_image_selected"]
[connection signal="button_down" from="ScrollContainer/VBoxContainer/GenerateBtn" to="." method="_on_generate_btn_down"]
[connection signal="button_down" from="ScrollContainer/VBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
